src/pages/AboutUs.css
/* ... */
.about-partner-card img {
    height: 40px;
    width: auto;
}

@media only screen and (max-width: 768px) {
    .partners-swiper {
            margin-bottom: 0px;
            padding-bottom: 0px;
            justify-content: space-between !important;
        }
    .breadcumb-section{
        padding-top: 90px !important;
        padding-bottom: 90px !important;
    }
        .about-partner-card{
            height: auto;
            width:80px;
        }
        .swiper{
            margin-top:0px;
        }
    .pd-section{
        padding-top: 80px;
        padding-bottom: 80px;
    }
        .about-us-content .title{
        font-size: 36px;
        line-height: 45px;
        }
        .about-us-content{
            padding-bottom: 30px;
        }
        .about-us-counter{
            padding-top: 30px;
            padding-left: 15px;
            padding-right: 15px;
        }
        .about-us-counter p{
            margin-bottom: 0;
        }
        .about-us-counter .line{
            margin-top: 30px;
            margin-bottom: 35px;
        }
        .tf-icon-box{
            border: 1px solid rgba(2, 6, 38, 0.1);
            padding: 50px 30px 50px 30px;
            position: relative;
            overflow: hidden;
        }
        .quote-content{
            padding-top: 2em;
            padding-left: 15px;
            padding-right: 15px;
            padding-bottom: 0;
        }
        .quote-text{
            font-size: 22px;
            line-height: 38px;
        }
        .quote-author{
            font-size: 18px;
            margin-right: 30px;
        }
        .funfacts-section{
            padding-top: 80px;
            padding-bottom: 80px;
        }
                .funfacts-title {
                    font-size: 36px;
                    line-height: 45px;
                }
        
                .counter-content h3 {
                    font-size: 32px;
                }
        
                .counter-icon {
                    font-size: 35px;
                }
                .video-about-us{
                    margin-bottom: 150px;
                }
                .testimonial-video {
                    padding-top: 80px;
                    padding-bottom: 0px;
                }
                .testimonial-heading-title{
                    margin: 0;
                    padding: 0 15px;
                }
                .about-testimonial-card{
                    flex-direction: column;
                    gap:0;
                    justify-content:center !important;
                }
                .about-testimonial-image img{
                    width: 130PX;
                    height: 130PX;
                }
                .about-testimonial-image::before{
                    width: 130px;
                    height: 130px;
                }
                .about-testimonial-text{
                    font-size: 20px;
                        line-height: 32px;
                        margin-bottom: 25px;
                        padding-bottom: 20px;
                }
                .about-testimonial-bottom{
                    justify-content: space-between;
                        align-items: center;
                        display: flex;
                }
                .about-testimonial-name{
                    font-size: 18px;
                    
                }
                .swiper-pagination-bullets.swiper-pagination-horizontal{
                    display: none;
                }
}

